--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,36 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="background_Color">#ffffff</item>
+        <item name="car_background">#ffffff</item>
+        <item name="Text_Color">#000</item>
+        <item name="Button_Color">#ffffff</item>
+
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+
     </style>
+
+    <style name="darkTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="background_Color">#000000</item>
+        <item name="car_background">#ffffff</item>
+        <item name="Text_Color">#ffffff</item>
+        <item name="Button_Color">#ffffff</item>
+
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+
+    </style>
+    
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+
+    </style>
+
 
 </resources>
