--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,6 +7,8 @@
         <attr name="car_background" format="color"/>
         <attr name="Text_Color" format="color"/>
         <attr name="Button_Color" format="color"/>
+        <attr name="FloatingButton" format="color"/>
+        <attr name="colorEx" format="color"/>
 
     </declare-styleable>
 
