--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="background_Color">#ffffff</item>
-        <item name="car_background">#ffffff</item>
-        <item name="Text_Color">#000</item>
-        <item name="Button_Color">#ffffff</item>
+        <item name="background_Color">#e9e9e9</item>
+        <item name="car_background">@color/title</item>
+        <item name="Text_Color">#000000</item>
+        <item name="Button_Color">#95BBD3</item>
+        <item name="FloatingButton">#95BBD3</item>
+        <item name="colorEx">#252b32</item>
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
 
@@ -17,14 +19,16 @@
 
     <style name="darkTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">#23e1c8</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="background_Color">#000000</item>
-        <item name="car_background">#ffffff</item>
-        <item name="Text_Color">#ffffff</item>
-        <item name="Button_Color">#ffffff</item>
+        <item name="background_Color">#252b32</item>
+        <item name="car_background">#20cceb</item>
+        <item name="Text_Color">@color/word</item>
+        <item name="Button_Color">@color/word</item>
+        <item name="FloatingButton">#73787e</item>
+        <item name="colorEx">#e9e9e9</item>
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
 
