--- a/app/src/main/res/layout/activity_add_memory.xml
+++ b/app/src/main/res/layout/activity_add_memory.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/background_Color"
+    android:background="?attr/colorText"
     android:orientation="vertical"
     tools:context=".AddMemory">
 
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="hide1"
-        android:background="?attr/colorEx"
+        android:background="?attr/colorText"
         android:orientation="vertical">
 
         <TextView
@@ -33,7 +33,7 @@
             android:layout_marginTop="30dp"
             android:fontFamily="@font/aclonica"
             android:text="Çarşamba, \n 19/11/1997"
-            android:textColor="?background_Color"
+            android:textColor="?colorEx"
             android:layout_marginBottom="80dp"
             android:textSize="30sp" />
 
@@ -45,7 +45,6 @@
         android:layout_height="wrap_content"
         android:minHeight="400dp"
         android:layout_marginTop="-40dp"
-        android:background="@drawable/radius2"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:orientation="vertical">
@@ -57,9 +56,10 @@
             android:minHeight="50dp"
             android:textAlignment="textStart"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="?background_Color"
             android:padding="15dp"
             android:layout_marginTop="20dp"
+            android:textColorHint="?background_Color"
             android:layout_marginStart="15dp"
             android:fontFamily="@font/aclonica"
             android:layout_marginEnd="15dp"
@@ -79,9 +79,10 @@
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             android:paddingBottom="40dp"
-            android:textColor="@color/black"
+            android:textColor="?background_Color"
             android:textSize="14sp"
             android:textAlignment="textStart"
+            android:textColorHint="?background_Color"
             android:gravity="start"
             android:hint="Yazmaya Başlayın..."
             android:layout_marginTop="20dp"
@@ -99,9 +100,9 @@
                 android:gravity="center"
                 android:layout_marginTop="-40dp"
                 android:padding="10dp"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="70dp"
                 android:layout_marginBottom="30dp"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="70dp"
                 android:background="@drawable/radius">
 
                 <ImageView
