--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,8 @@
         <item name="Button_Color">#95BBD3</item>
         <item name="FloatingButton">#95BBD3</item>
         <item name="colorEx">#252b32</item>
+        <item name="colorText">#CFE2F3</item>
+
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
 
@@ -29,6 +31,7 @@
         <item name="Button_Color">@color/word</item>
         <item name="FloatingButton">#73787e</item>
         <item name="colorEx">#e9e9e9</item>
+        <item name="colorText">#252b32</item>
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
 
