--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -5,16 +5,140 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#252b32"
+
     tools:context=".PasswordActivity">
 
-    <com.hanks.passcodeview.PasscodeView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/passcode_view"
-        android:background="#222222"
-        app:firstInputTip="Lütfen 4 Haneli Şifrenizi Girin"
-        app:correctStateColor="@android:color/holo_green_light"
-        app:wrongStateColor="@android:color/holo_red_light"
-        app:numberTextColor="@android:color/darker_gray"/>
+        android:layout_marginTop="100dp"
+        android:background="#252b32">
+
+        <LinearLayout
+            android:id="@+id/frst_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical">
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:text="Lütfen Şifrenizi Giriniz"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/clr_grey_text"
+                android:textSize="32sp" />
+
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/frst_ll"
+            android:orientation="horizontal"
+            android:id="@+id/linerarText"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:layout_marginTop="60dp">
+
+            <EditText
+                android:id="@+id/edit_1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:inputType="numberPassword"
+                android:textColor="@color/clr_white_text"
+                android:textSize="20sp"
+                android:maxLength="1"
+                android:layout_marginEnd="8dp"
+                android:background="@color/clr_grey_text_transparent"/>
+
+            <EditText
+                android:id="@+id/edit_2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:inputType="numberPassword"
+                android:maxLength="1"
+                android:textColor="@color/clr_white_text"
+                android:textSize="20sp"
+                android:layout_marginEnd="8dp"
+                android:background="@color/clr_grey_text_transparent"/>
+
+            <EditText
+                android:id="@+id/edit_3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:inputType="numberPassword"
+                android:textColor="@color/clr_white_text"
+                android:textSize="20sp"
+                android:maxLength="1"
+                android:layout_marginEnd="8dp"
+                android:background="@color/clr_grey_text_transparent"/>
+
+            <EditText
+                android:id="@+id/edit_4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:inputType="numberPassword"
+                android:layout_marginEnd="8dp"
+                android:textSize="20sp"
+                android:maxLength="1"
+                android:textColor="@color/clr_white_text"
+                android:background="@color/clr_grey_text_transparent"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/linerarText"
+            android:layout_margin="10dp"
+            android:gravity="bottom|end"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Devam et"
+                android:background="@drawable/bg_btn"
+                android:onClick="getPassword"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:textColor="@color/white"
+                android:drawableEnd="@drawable/forward"
+                android:textStyle="bold"
+                android:layout_marginBottom="50dp"
+                android:layout_marginTop="50dp"/>
+
+            <ImageView
+                android:layout_width="170dp"
+                android:layout_height="170dp"
+                android:layout_gravity="right"
+                android:background="@drawable/featherpen"
+                android:backgroundTint="@color/feather" />
+
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
