filter bug fixed

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -286,6 +286,8 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/rate"
+        android:onClick="rateApp"
         android:padding="15dp"
         android:orientation="horizontal">
 
@@ -306,6 +308,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
+
                 android:textColor="?attr/Text_Color"
                 android:text="Uygulamaya Puan Ver"/>
 
